--- a/public/global2.css
+++ b/public/global2.css
@@ -644,6 +644,7 @@ what's the diff between interactable, freeButton, and iconButton? so far not muc
 .EventFileValue .audioPreviewGatewayContainer {
     display: flex;
     align-items: center;
+    width: 32px;
 }
 
 .EventFileValue .audioPreviewGatewayContainer .audioPreviewGatewayButton {
